popart/src/objects/ArtMash_Contest__c.object
<CustomObject>
    <description>Setting and configurations for an ArtMash caption contest.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this ArtMash contest active and available to see on the website?</description>
        <inlineHelpText>Is this ArtMash contest active and available to see on the website?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picasa_Dropbox_Email__c</fullName>
        <description>What url to mail the images to. Really this could be any email i suppose.</description>
        <inlineHelpText>What url to mail the images to. Really this could be any email i suppose.</inlineHelpText>
        <label>Picasa Dropbox Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Picasa_Dropbox_URL__c</fullName>
        <description>What is the URL of the picasa gallery users can go to to view their image?</description>
        <inlineHelpText>What is the URL of the picasa gallery users can go to to view their image?</inlineHelpText>
        <label>Picasa Dropbox URL</label>
        <type>Url</type>
    </fields>
    <label>ArtMash Contest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ArtMash Contest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ArtMash Contests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>